# orangepi-debug-tool

./: .editorconfig  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER-GUIDE.md  FINAL-SUMMARY.md  LICENSE  OrangePiDebugTool.spec  PROJECT-COMPLETION-REPORT.md  README.md  RELEASE-CHECKLIST.md  RELEASE_NOTES.md  STATUS.md  TEST-PLAN.md  TEST-REPORT.md  USER-MANUAL.md  build.sh  config.ini  index.html  orange_debug_tool.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run.py  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-fix.yml  build-release.yml  build.yml  ci.yml  deploy.yml  nightly.yml  release.yml
assets/: index-B5x7cFvy.css  index-DLgybetA.js
docs/: API.md  BUILD-GUIDE.md  CHANGELOG.md  DEVELOPER-GUIDE.md  ICON-DESIGN.md  WORKFLOW-FIX-REPORT.md  guide.md  user_guide.md
resources/devices/: orangepi_zero2.json
scripts/: check.sh  release.sh  test.sh  update-deps.sh
src/: App.tsx  main.py  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: tauri.dev.conf.json  tauri.prod.conf.json  tauri.test.conf.json
src-tauri/icons/: README.md
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: gpio.rs  mod.rs  pwm.rs  serial.rs  system.rs
src-tauri/src/devices/: gpio.rs  mod.rs  pwm.rs  serial.rs
src-tauri/src/gpio/: mod.rs
src-tauri/src/pwm/: mod.rs
src-tauri/src/serial/: export.rs  graph.rs  macro_cmd.rs  mod.rs  multi_port.rs  parser.rs  terminal.rs
src-tauri/src/ui/: i18n.rs  mod.rs  theme.rs
src-tauri/src/utils/: binary_protocol.rs  logger.rs  logging.rs  mod.rs
src/components/: DataLogger.tsx  GPIOView.tsx  PWMControl.tsx  ProtocolAnalyzer.tsx  SerialPanel.tsx
src/components/gpio/: GpioPage.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/log/: LogPage.tsx
src/components/pwm/: PwmPage.tsx
src/components/serial/: CommandPanel.tsx  SerialChart.tsx  SerialPage.tsx  SerialTerminal.tsx
src/orangepi_debug_tool/: __init__.py  app.py  cli.py
src/orangepi_debug_tool/controllers/: __init__.py  gpio_controller.py  serial_controller.py
src/orangepi_debug_tool/models/: __init__.py  gpio.py  serial_port.py
src/orangepi_debug_tool/utils/: __init__.py  config.py  logger.py
src/orangepi_debug_tool/views/: __init__.py  gpio_view.py  main_window.py  serial_view.py
src/stores/: appStore.ts  gpioStore.ts  index.ts  logStore.ts  pwmStore.ts  serialStore.ts  themeStore.ts
src/styles/: globals.css  index.css
src/types/: index.ts
tests/: setup.ts  test_basic.py  test_core_logic.py  test_models.py
tests/e2e/: serial.spec.ts
tests/unit/: serial.test.ts
